--- a/src/styles/components/coming-soon.scss
+++ b/src/styles/components/coming-soon.scss
@@ -13,9 +13,7 @@
 }
 
 .coming-soon {
-  @include media(md) {
-    height: 260px;
-  }
+ 
   @include media(md) {
     margin-top: 48px;
   }
@@ -23,6 +21,10 @@
   margin-top: 100px;
 
   &__inner {
+    @include media(md) {
+      height: 260px;
+    }
+
     position: relative;
     height: 300px;
     border:1px solid var(--border-divider);
@@ -69,9 +71,13 @@
     padding: 14px;
 
     img {
+      overflow: hidden;
+
       width: 100%;
       height: 100%;
+
       object-fit: cover;
+      border-radius: 12px;
     }
   }
 
